added to comments commands styles with css priority

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-.FontWeightBold{font-weight:bold}
-.FontStyleItalic{font-style:italic}
+.FontWeightBold{font-weight:bold;font-style:normal}
+li{font-weight:normal;font-style:italic}
 *{text-align: center}
 ul>li{text-align:left}
 dt{font-weight:bold}
