--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-.FontWeightBold{font-weight:bold;font-style:normal}
-li{font-weight:normal;font-style:italic}
+.FontWeightBold{font-weight:bold;font-style:normal;margin-bottom: 0px}
+li{font-weight:normal;font-style:italic;margin-bottom: 1%}
 *{text-align: center}
 ul>li{text-align:left}
 dt{font-weight:bold}
